--- a/ExtractB/Extract2B.ipynb
+++ b/ExtractB/Extract2B.ipynb
@@ -1526,9 +1526,9 @@
    "source": [
     "from py2neo import Graph\n",
     "import neo4j\n",
-    "host = 'neo4j+s://4f1bd8a7.databases.neo4j.io:7687'  \n",
+    "host = 'neo4j+s://zzzzzzzzz.databases.neo4j.io:7687'  \n",
     "user = 'neo4j'\n",
-    "password =   'YxUE7iEVpixBEU3heejyrt43r5JKWfqS4M3VFWhVnWI'        \n",
+    "password =   'Yyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy'        \n",
     "\n",
     "driver = neo4j.GraphDatabase.driver(host, auth=(user, password))\n",
     "for index, row in reln_df.iterrows():\n",
